--- a/html/index.html
+++ b/html/index.html
@@ -208,9 +208,9 @@
               </ul>
             </div>
 
-            <ul class="movies-list has-scrollbar">
-              <li>
-                <div class="movie-card">
+            <ul class="movies-list has-scrollbar" id="movies-list">
+              <!-- <li>
+              <div class="movie-card">
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
@@ -359,7 +359,7 @@
                     </div>
                   </div>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </section>
