--- a/html/index.html
+++ b/html/index.html
@@ -35,11 +35,9 @@
     <header class="header" data-header>
       <div class="container">
         <div class="overlay" data-overlay></div>
-
         <a href="./index.html" class="logo">
-          <img src="/images/logo.svg" alt="logo" />
+          <img src="/images/logo.png" alt="Madrid movies logo" />
         </a>
-
         <div class="header-actions">
           <button class="search-btn">
             <ion-icon name="search-outline"></ion-icon>
@@ -58,7 +56,7 @@
           </div>
 
           <button class="btn btn-primary">Sign in</button>
-          <a href="/html/signup.html class= "">
+          <a href="/html/signup.html">
         </div>
 
         <button class="menu-open-btn" data-menu-open-btn>
@@ -67,10 +65,6 @@
 
         <nav class="navbar" data-navbar>
           <div class="navbar-top">
-            <a href="./index.html" class="logo">
-              <img src="/images/logo.svg" alt="Madrid movies logo" />
-            </a>
-
             <button class="menu-close-btn" data-menu-close-btn>
               <ion-icon name="close-outline"></ion-icon>
             </button>
@@ -962,36 +956,6 @@
     <footer class="footer">
       <div class="footer-top">
         <div class="container">
-          <div class="footer-brand-wrapper">
-            <a href="./index.html" class="logo">
-              <img src="/images/logo.svg" alt="MM logo" />
-            </a>
-
-            <ul class="footer-list">
-              <li>
-                <a href="./index.html" class="footer-link">Home</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer-link">Movie</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer-link">TV Show</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer-link">Web Series</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer-link">Pricing</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="divider"></div>
-
           <div class="quicklink-wrapper">
             <ul class="quicklink-list">
               <li>
