replace absolute urls with relative urls

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- 
     -  css link
   -->
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 
     <!-- 
     - google font link
@@ -36,7 +36,7 @@
       <div class="container">
         <div class="overlay" data-overlay></div>
         <a href="./index.html" class="logo">
-          <img src="/images/logo.png" alt="Madrid movies logo" />
+          <img src="./images/logo.png" alt="Madrid movies logo" />
         </a>
         <div class="header-actions">
           <button class="search-btn">
@@ -208,7 +208,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/upcoming-1.png"
+                        src="./images/upcoming-1.png"
                         alt="The Northman movie poster"
                       />
                     </figure>
@@ -245,7 +245,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/upcoming-2.png"
+                        src="./images/upcoming-2.png"
                         alt="Doctor Strange in the Multiverse of Madness movie poster"
                       />
                     </figure>
@@ -284,7 +284,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/upcoming-3.png"
+                        src="./images/upcoming-3.png"
                         alt="Memory movie poster"
                       />
                     </figure>
@@ -321,7 +321,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/upcoming-4.png"
+                        src="./images/upcoming-4.png"
                         alt="The Unbearable Weight of Massive Talent movie poster"
                       />
                     </figure>
@@ -367,12 +367,12 @@
             <div class="service-banner">
               <figure>
                 <img
-                  src="/images/service-banner.jpg"
+                  src="./images/service-banner.jpg"
                   alt="HD 4k resolution! only €3.99"
                 />
               </figure>
 
-              <a href="/images/service-banner.jpg" download class="service-btn">
+              <a href="./images/service-banner.jpg" download class="service-btn">
                 <span>Download</span>
 
                 <ion-icon name="download-outline"></ion-icon>
@@ -466,7 +466,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-1.png"
+                        src="./images/movie-1.png"
                         alt="Sonic the Hedgehog 2 movie poster"
                       />
                     </figure>
@@ -503,7 +503,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-2.png"
+                        src="./images/movie-2.png"
                         alt="Morbius movie poster"
                       />
                     </figure>
@@ -540,7 +540,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-3.png"
+                        src="./images/movie-3.png"
                         alt="The Adam Project movie poster"
                       />
                     </figure>
@@ -577,7 +577,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-4.png"
+                        src="./images/movie-4.png"
                         alt="Free Guy movie poster"
                       />
                     </figure>
@@ -614,7 +614,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-5.png"
+                        src="./images/movie-5.png"
                         alt="The Batman movie poster"
                       />
                     </figure>
@@ -651,7 +651,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-6.png"
+                        src="./images/movie-6.png"
                         alt="Uncharted movie poster"
                       />
                     </figure>
@@ -688,7 +688,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-7.png"
+                        src="./images/movie-7.png"
                         alt="Death on the Nile movie poster"
                       />
                     </figure>
@@ -725,7 +725,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/movie-8.png"
+                        src="./images/movie-8.png"
                         alt="The King's Man movie poster"
                       />
                     </figure>
@@ -776,7 +776,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/series-1.png"
+                        src="./images/series-1.png"
                         alt="Moon Knight movie poster"
                       />
                     </figure>
@@ -812,7 +812,7 @@
                 <div class="movie-card">
                   <a href="./movie-details.html">
                     <figure class="card-banner">
-                      <img src="/images/series-2.png" alt="Halo movie poster" />
+                      <img src="./images/series-2.png" alt="Halo movie poster" />
                     </figure>
                   </a>
 
@@ -847,7 +847,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/series-3.png"
+                        src="./images/series-3.png"
                         alt="Vikings: Valhalla movie poster"
                       />
                     </figure>
@@ -884,7 +884,7 @@
                   <a href="./movie-details.html">
                     <figure class="card-banner">
                       <img
-                        src="/images/series-4.png"
+                        src="./images/series-4.png"
                         alt="Money Heist movie poster"
                       />
                     </figure>
@@ -1005,7 +1005,7 @@
           </p>
 
           <img
-            src="/images/footer-bottom-img.png"
+            src="./images/footer-bottom-img.png"
             alt="Online banking companies logo"
             class="footer-bottom-img"
           />
@@ -1024,7 +1024,7 @@
     <!-- 
     - js link
   -->
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 
     <!-- 
     - ionicon link
